--- a/docs/games/play_suffix_station/css/style.css
+++ b/docs/games/play_suffix_station/css/style.css
@@ -124,7 +124,7 @@ body {
 }
 
 .timer-chip {
-    flex: 1;
+    display: none !important;
 }
 
 .timer-chip .value {
@@ -183,6 +183,7 @@ body {
 
 /* Timer bar */
 .timer-bar-bg {
+    display: none !important;
     width: 100%;
     height: 3px;
     background: rgba(255, 255, 255, 0.08);
